# Quotation-Registry

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: db.py  main.py  models.py  notifications.py  repositories.py
app/routers/: assets.py  entries.py  quotations.py  settings.py
app/static/: index.html  manifest.json  sw.js
app/static/css/: styles.css
app/static/js/: app.js
